client/src/App.css
:root,
html,
body,
* {
    margin: 0;
    padding: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-family: "Poppins", sans-serif;

    --text: rgb(15, 15, 15);
    --background: #e3ceb9;
    --border: #76583a;
}

.App {
    width: 100%;
    position: fixed;
    overflow: hidden;
    background-color: var(--background);
}

* {
    box-sizing: border-box;
}

::placeholder {
    color: var(--border);
}

.resp-box {
    max-height: calc(100vh - 144px);
    width: 100%;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
    margin: 0px;
    padding-right: 20px;
}

.resp {
    margin-left: 10px;
    margin-bottom: 15px;
    padding-left: 10px;
}

.resp:first-child {
    margin-top: 10px;
}

.resp.user {
    border-left: 4px solid green;
}

.resp.system {
    border-left: 4px solid gray;
}

.resp pre {
    /* padding: 10px; */
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
}

.info-section {
    font-size: 14px;
}

.flex-container {
    display: flex;
    flex-direction: column;
    height: 100vh;
}

.row {
    display: flex;
}

.top-row .column {
    height: 60px;
    flex-shrink: 0;
}

.bottom-row .column {
    height: 80px;
    flex-shrink: 0;
}

.top-row {
    border-bottom: 2px solid var(--border);
}

.bottom-row {
    border-top: 2px solid var(--border);
}

.middle-row {
    flex-grow: 1;
}

.column {
    flex: 1;
}

.first-column {
    width: 180px;
    flex: none;
    border-right: 2px solid var(--border);
}

.bar-options {
    display: flex;
    align-items: center;
    height: 60px;
}

.title {
    background-color: #c5b3a0;
}

.title,
.keys {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    font-size: 20px;
}

.keys {
    width: 100%;
    border: none;
    background-color: var(--background);
    cursor: pointer;
}

.keys:hover {
    background-color: #c5b3a0;
}

.model-comps,
.eval-comps {
    padding-left: 20px;
    font-size: 20px;
}

.eval-text {
    padding-right: 10px;
}

.model-select {
    padding-left: 10px;
    display: flex;
    align-items: center;
}

.model-select select {
    border-radius: 0;
    background-color: var(--background);
    border: 2px solid var(--border);
    outline: none;
    height: 30px;
    width: 160px;
}

.eval-toggle {
    border-radius: 0;
    cursor: pointer;
    background-color: var(--background);
    border: 2px solid var(--border);
    outline: none;
    width: 30px;
    height: 30px;
    font-size: 18px;
    font-weight: bold;
    color: var(--background);
}

.eval-toggle.on {
    background-color: var(--border);
}

.prompt-comps {
    display: flex;
    height: 80px;
}

.prompt-button {
    width: 80px;
    font-size: 30px;
    background-color: #c5b3a0;
}

.prompt-box {
    height: 75px;
    padding: 8px;
    flex-grow: 1;
    background-color: var(--background);
    outline: none;
    font-size: 16px;
    resize: none;
    overflow-y: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.prompt-button,
.prompt-box {
    border: none;
}

.prompt-button {
    border-left: 2px solid var(--border);
}

.model-comps,
.eval-comps {
    display: flex;
}

.modal {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background: rgba(0, 0, 0, 0.3);
}

.modal.hidden {
    display: none;
}

.modal-box {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: var(--background);
    padding: 20px;
    border: 2px solid var(--border);
}

.modal-background {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
}

.modal-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 20px;
    font-size: 22px;
}

.modal-close {
    border-radius: 0;
    cursor: pointer;
    background-color: var(--border);
    border: 2px solid var(--border);
    outline: none;
    width: 30px;
    height: 30px;
    font-size: 18px;
    font-weight: bold;
    color: var(--background);
}

.modal-content {
    display: flex;
    flex-direction: column;
    align-items: left;
    width: 350px;
}

.modal-content div {
    margin-bottom: 10px;
    display: flex;
    gap: 10px;
    align-items: center;
}

.modal-content div input {
    border-radius: 0;
    background-color: var(--background);
    border: 2px solid var(--border);
    outline: none;
    height: 30px;
    flex-grow: 1;
    padding-left: 6px;
    font-family: monospace;
}

